# suiron

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  trace.json
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml
crates/suiron-cli/: Cargo.toml
crates/suiron-cli/src/: chat.rs  lab.rs  lib.rs  machine.rs  main.rs  trace.rs  view.rs  viewer.html
crates/suiron-cli/tests/: attribution.rs
crates/suiron-core/: Cargo.toml
crates/suiron-core/src/: forward.rs  generate.rs  lib.rs  math.rs  model.rs  sampling.rs  tokenizer.rs
crates/suiron-core/tests/: real_model.rs
crates/suiron-gguf/: Cargo.toml
crates/suiron-gguf/src/: dequant.rs  lib.rs  reader.rs  types.rs
crates/suiron-metal/: Cargo.toml
crates/suiron-metal/src/: forward.rs  kernels.metal  lib.rs  objc.rs
crates/suiron-metal/tests/: gpu_parity.rs
crates/suiron-wasm/: Cargo.toml
crates/suiron-wasm/src/: lib.rs
docs/: microscope.md
scripts/: demo-data.sh  dev.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  autoplay.ts  cardhome.test.ts  experiments.ts  forkdiff.test.ts  induction.test.ts  lib.test.ts  lib.ts  link.test.ts  link.ts  main.tsx  styles.css  types.ts  vite-env.d.ts  wasmBackend.ts  wasmWorker.ts
web/src/components/: AttentionInteractive.tsx  AttnSpace.tsx  BandHeader.tsx  ChatPanel.tsx  CodeView.tsx  ConceptCard.tsx  Controls.tsx  DotProduct.tsx  DotStrip.tsx  DrawField.tsx  Drawer.tsx  EmbeddingRow.tsx  EmptyState.tsx  EngineSource.tsx  Epilogue.tsx  Explainer.tsx  Explanations.tsx  Flow.tsx  ForkDiff.tsx  Geometry.tsx  HeadField.tsx  HeadGrid.tsx  KvCacheDemo.tsx  LayerStack.tsx  LensClimb.tsx  LensSpace.tsx  Logits.tsx  LoopChain.tsx  Machine.tsx  ModelOverview.tsx  Quantization.tsx  RmsNormDemo.tsx  RnormSparkline.tsx  RoleTag.tsx  RopeDemo.tsx  Selection.tsx  SignalField.tsx  StageMath.tsx  Starfield.tsx  Stepper.tsx  (+13 more)
