[package]
name = "suiron-cli"
description = "suiron command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "suiron"
path = "src/main.rs"

[dependencies]
suiron-gguf = { path = "../suiron-gguf" }
suiron-core = { path = "../suiron-core" }

# Metal is macOS-only FFI; gating it here lets suiron-wasm depend on this
# package's lib (machine/trace/chat) when building for wasm32.
[target.'cfg(target_os = "macos")'.dependencies]
suiron-metal = { path = "../suiron-metal" }
