[package]
name = "suiron-wasm"
description = "suiron in the browser: wasm-bindgen bindings over the same engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# The one crate exempt from the zero-dependency rule alongside web/ — it is a
# presentation-layer target. The native engine crates stay std-only.
[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
suiron-gguf = { path = "../suiron-gguf" }
suiron-core = { path = "../suiron-core" }
suiron-cli = { path = "../suiron-cli" }
